[gd_scene load_steps=2 format=3 uid="uid://cxw8dk67i6fl4"]

[ext_resource type="Script" uid="uid://d3db6dhtdekm1" path="res://scripts/game/character_modules/animation_handler.gd" id="1_fgci8"]

[node name="PlayerAnimation" type="Node2D"]
script = ExtResource("1_fgci8")
metadata/_custom_type_script = "uid://d3db6dhtdekm1"

[node name="HitFloorTimer" type="Timer" parent="."]
one_shot = true

[node name="HitFloorWalkTimer" type="Timer" parent="."]
one_shot = true
